--- a/app/static/base_style.css
+++ b/app/static/base_style.css
@@ -19,21 +19,25 @@
 
 /* -------------------------------------------- SIDEBAR DOCCARE LOGO -------------------------------------------- */
 .cms-logo { 
-    margin-top: 35px;
-    margin-bottom: 25px;
+    margin-top: 15px;
+    margin-bottom: 15px;
     align-items: center;
+    justify-content: center;
+    font-size: 12px;
+    border-bottom: 1px solid var(--blueB);
 }
 
 .cms-logo img {
-    width: 55px;
-    margin-left: 5px;
-    margin-right: 55px;
+    width: 40px;
+    justify-content: center;
+    margin-left: 11px;
+    margin-bottom: 20px;
 }
 
 /* -------------------------------------------- SIDEBAR -------------------------------------------- */
 .sidenav-bg {
     width: 80px;  
-    height: 100vh;
+    height: 100vh;  
     background-color: var(--blueC);
     position: fixed;  
     padding: 8px;
@@ -42,17 +46,32 @@
 }
 
 /* logout */
+.logout {
+    margin-left: 5px;
+}
+
 .logout:hover img {
     transform: translateY(0%);
 }
 
+/* notifications */
+.notifications {
+    width: 80%;  
+    height: 50px; 
+    margin-left: 6px;
+}
+
+.notifications:active {
+    transform: translateY(1%);
+}
+
 /* icon */
 .icon-bg {
-    width: 100%;  
-    height: 62px; 
+    width: 80%;  
+    height: 50px; 
     border-radius: 30px; 
-    padding: 4px;
     transition: width 0.3s;
+    margin-left: 6px;
 }
 
 .icon-bg:hover {
@@ -63,12 +82,12 @@
 
 /* selected icon */
 .selected-icon-bg {
-    width: 100%;  
-    height: 62px; 
+    width: 80%;  
+    height: 50px;   
     background-color: white; 
     border-radius: 100%; 
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); 
-    padding: 4px;
+    margin-left: 6px;
 }
 
 /* icon text styles */
@@ -80,7 +99,7 @@
     visibility: hidden;
     transform: translateY(-50%);
     top: 18px;
-    left: 50px;
+    left: 30px;
     padding: 10px;
     border-radius: 10px;
     background-color: var(--darkBlue);
@@ -88,24 +107,8 @@
     font-weight: 100;
 }
 
-.icon-bg p::after, .logout p::after, .selected-icon-bg p::after {
-    content: "";
-    position: absolute;
-    width: 26px;
-    height: 26px;
-    border-radius: 2px;
-    background-color: var(--darkBlue);
-    transform: rotate(45deg);
-    z-index: -1;
-}
-
-.icon-bg p::after, .logout p::after, .selected-icon-bg p::after {
-    left: -6px;
-    top: 5px;
-}
-
 .icon-bg:hover p, .logout:hover p, .selected-icon-bg:hover p {
-    left: 35px;
+    left: 40px;
     opacity: 1;
     visibility: visible;
     z-index: 99;
@@ -119,7 +122,6 @@ ul li {
     margin-bottom: 5px;
     display: flex;
     align-items: center;
-    justify-content: flex-start;
     cursor: pointer;
     font-size: 14px;
     font-weight: 900;
@@ -132,9 +134,8 @@ a {
 }
 
 ul li img {
-    margin-right: 0px;
     margin-left: 15px;
-    width: 26px;
+    width: 20px;
 }
 
 ul li p {
@@ -142,14 +143,23 @@ ul li p {
     display: none;
 }
 
+.navbar {
+    width: 100%;
+    height: 62px;
+    position: relative;
+    background-color: white;
+    border-bottom: 1px solid var(--blueC);
+}
+
 /* -------------------------------------------- SIDEBAR USER -------------------------------------------- */
 .sidenav-user-bg {
     font-size: 12px;
     display: flex;
     align-items: center;
-    height: 65px; 
+    height: 50px; 
     overflow: hidden;
-    margin-bottom: 25px;
+    margin-bottom: 20px;
+    margin-top: 100%;
 }
 
 .sidenav-user-bg:hover {
@@ -159,27 +169,27 @@ ul li p {
 
 .sidenav-user-bg div {
     position: relative;
-    transition: all 0.2s ease-out;
+    transition: all 0.3s ease-out;
     opacity: 0;
     visibility: hidden;
     background-color: var(--darkBlue);
     color: white;
     padding: 10px;
     border-radius: 10px;
-    left: 25px;
+    left: 15px;
 }
 
 .sidenav-user-bg:hover div {
-    left: 20px;
+    left: 25px;
     opacity: 1;
     visibility: visible;
     z-index: 1;
 }
 
 .user-img {
-    width: 50px;
+    width: 45px;
     border-radius: 100%;
-    margin-left: 7px;
+    margin-left: 10px;
 }
 
 /* -------------------------------------------- DASHBOARD -------------------------------------------- */
@@ -187,14 +197,14 @@ ul li p {
     font-weight: 900;
     position: absolute;
     display: flex;
-    top: 180px;
+    top: 190px;
     left: 110px;
     color: var(--darkBlue);
 }
 
 .doctor-bg img {
     position: relative;
-    width: 1400px;
+    width: 91%;
     top: 10px;
     left: 110px;
     height: 150px;
@@ -221,19 +231,35 @@ ul li p {
     color: white;   
 }
 
+
+/* -------------------------------------------- ADD ICONS -------------------------------------------- */
+.add-icon img {
+    width: 40px;
+    right: 30px;
+    top: 10px;
+    justify-content: flex-end;
+    border-radius: 100%;
+    z-index: 99;
+    position: fixed;
+}
+
+.add-icon img:active {
+    transform: translateY(1px);
+}
+
 /* -------------------------------------------- PATIENT TABLE -------------------------------------------- */
 .patient-header p {
     position: absolute;
-    top: 45px;
+    top: 20px;
     left: 110px;
     font-weight: 900;
     font-size: 18px;
 }
 
 .patient-table {
+    width: 91%;
     position: relative; 
-    width: 1400px; 
-    top: 85px; 
+    top: 20px; 
     left: 110px;
     line-height: 1.5;
     color: var(--darkBlue);
@@ -252,16 +278,20 @@ ul li p {
 
 .table th,
 .table td {
-    padding: 0.30rem;
+    padding: 0.50rem;
 }
 
 .table thead {
-    background-color: var(--blueB);
+    background-color: var(--blueC);
     color: var(--darkBlue);
 }
 
-.table-striped tbody tr:nth-of-type(even) {
+/* .table-striped tbody tr:nth-of-type(even) {
     background-color: var(--blueC)
+} */
+
+.table-striped tbody td {
+    border-bottom: 1px solid var(--blueC); 
 }
 
 .view-btn {
@@ -285,7 +315,6 @@ ul li p {
 
 .delete-icon img {
     width: 40px;
-    border-radius: 100%;
     cursor: pointer;
 }
 
@@ -297,6 +326,9 @@ ul li p {
 .dataTables_info {
     margin-bottom: 0px;
     position: absolute;
+    font-style: italic;
+    color: var(--grayA);
+    font-size: 14px;
 }
 
 /* -------------------------------------------- PAGINATION -------------------------------------------- */
@@ -304,8 +336,8 @@ ul li p {
     display: flex;
     padding-left: 0;
     list-style: none;
-    left: 560px;
-    position: absolute;
+    justify-content: center;
+    position: relative;
 }
   
 .page-link {
@@ -343,13 +375,13 @@ ul li p {
     background-color: white; 
     border: 1px solid var(--blueB); 
     border-radius: 0.25rem; 
-    margin-left: 10px;
-    width: 196px;
+    margin-left: 15px;
+    height: 35px;
+    width: 235px;
 }
 
 .dataTables_wrapper .dataTables_filter {
-    margin-left: 1135px;
-    margin-top: 0px;
+    margin-left: 77%;
 }
   
 .dataTables_wrapper .dataTables_filter input:focus {
@@ -438,11 +470,18 @@ ul li p {
     font-weight: 900;
     color: var(--blueA);
     z-index: 1;
-    right: 90px;
-    top: 40px;
+    right: 50px;
+    top: 15px;
     height: 35px;
-    width: 220px;
+    width: 210px;
     font-size: 15px;
+    font-size: 14px;
+}
+
+.btn-submit.add-edit {
+    position: absolute;
+    top: 12px;
+    right: 60px;
 }
 
 /* -------------------------------------------- ROW -------------------------------------------- */
@@ -543,8 +582,15 @@ textarea:focus {
 }
   
 .modal-body {
-    padding: 20px;
+    padding: 35px;
     font-size: 16px;
+    justify-content: center;
+    text-align: center;
+}
+
+.modal-body button {
+    margin-right: 15px;
+    margin-left: 15px;
 }
   
 .modal-footer {
@@ -584,6 +630,15 @@ textarea:focus {
     color: var(--grayA);
 }
 
+.btn-done.option {
+    width: 180px;
+    height: 43px;
+}
+
+.btn-done.option:hover {
+    transform: scale(101%);
+}
+
 /* -------------------------------------------- FORM HEADER -------------------------------------------- */
 .med-header {
     position: relative;
@@ -604,7 +659,6 @@ textarea:focus {
 }
 
 .patient-bg.test {
-    width: 1230px;  
     height: 2800px; 
 }
 
